// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders ActionButton correctly 1`] = `
<div
  className=
      ms-Button
      {
        display: inline-flex;
      }
>
  <button
    aria-describedby={null}
    aria-label={undefined}
    aria-labelledby={null}
    aria-pressed={undefined}
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: transparent;
          background: transparent;
          border-radius: 0px;
          border: 1px solid transparent;
          box-sizing: border-box;
          color: #333333;
          cursor: pointer;
          display: flex;
          flex-wrap: nowrap;
          font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 40px;
          justify-content: flex-start;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          vertical-align: top;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric.is-focusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 0px;
          content: "";
          left: 0px;
          outline: 1px solid #666666;
          position: absolute;
          right: 0px;
          top: 0px;
          z-index: 1;
        }
        &:hover {
          color: #0078d7;
        }
        &:active {
          color: #000000;
        }
    data-is-focusable={true}
    disabled={undefined}
    type="button"
  >
    <div
      className=
          ms-Button-textContainer
          {
            flex-grow: 0;
          }
    >
      <div
        className=
            ms-Button-label
            {
              line-height: 100%;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
            }
        id="id__9"
      >
        Button
      </div>
    </div>
  </button>
</div>
`;

exports[`Button renders CommandBarButton correctly 1`] = `
<div
  className=
      ms-Button
      {
        display: inline-flex;
      }
>
  <button
    aria-describedby={null}
    aria-expanded={false}
    aria-haspopup={true}
    aria-label={undefined}
    aria-labelledby={null}
    aria-pressed={undefined}
    className=
        ms-CommandBarButton
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: #f4f4f4;
          background: transparent;
          border-radius: 0px;
          border: 1px solid transparent;
          box-sizing: border-box;
          color: #333333;
          cursor: pointer;
          display: flex;
          flex-wrap: nowrap;
          font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          justify-content: center;
          min-width: 40px;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          vertical-align: top;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric.is-focusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 0px;
          content: "";
          left: 0px;
          outline: 1px solid #666666;
          position: absolute;
          right: 0px;
          top: 0px;
          z-index: 1;
        }
        &:hover {
          background-color: #eaeaea;
          color: #212121;
        }
        &:active {
          background-color: #dadada;
          color: #000000;
        }
    data-is-focusable={true}
    data-target-id="id__13"
    disabled={undefined}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <i
      aria-hidden={true}
      aria-label={undefined}
      className=
          ms-Icon
          ms-Button-icon
          {
            color: #106ebe;
            display: inline-block;
            flex-shrink: 0;
            font-size: 16px;
            height: 16px;
            line-height: 16px;
            margin-bottom: 0;
            margin-left: 4px;
            margin-right: 4px;
            margin-top: 0;
            text-align: center;
            vertical-align: middle;
          }
      data-icon-name="Add"
      role="presentation"
    />
    <div
      className=
          ms-Button-textContainer
          {
            flex-grow: 1;
          }
    >
      <div
        className=
            ms-Button-label
            {
              font-weight: normal;
              line-height: 100%;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
            }
        id="id__13"
      >
        Create account
      </div>
    </div>
    <i
      aria-hidden={true}
      aria-label={undefined}
      className=
          ms-Icon
          ms-Button-menuIcon
          {
            color: #666666;
            display: inline-block;
            flex-shrink: 0;
            font-size: 12px;
            height: 16px;
            line-height: 16px;
            margin-bottom: 0;
            margin-left: 4px;
            margin-right: 4px;
            margin-top: 0;
            text-align: center;
            vertical-align: middle;
          }
      data-icon-name="ChevronDown"
      role="presentation"
    />
  </button>
</div>
`;

exports[`Button renders CompoundButton correctly 1`] = `
<div
  className=
      ms-Button
      ms-Button-compound
      {
        display: inline-flex;
        height: auto;
        max-width: 280px;
      }
>
  <button
    aria-describedby="id__19"
    aria-label={undefined}
    aria-labelledby={null}
    aria-pressed={undefined}
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: flex-start;
          background-color: #f4f4f4;
          background: transparent;
          border-radius: 0px;
          border: 1px solid transparent;
          box-sizing: border-box;
          color: #333333;
          cursor: pointer;
          display: flex;
          flex-direction: row;
          flex-wrap: nowrap;
          font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          justify-content: center;
          min-height: 72px;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-decoration: none;
          user-select: none;
          vertical-align: top;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric.is-focusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 0px;
          content: "";
          left: 0px;
          outline: 1px solid #666666;
          position: absolute;
          right: 0px;
          top: 0px;
          z-index: 1;
        }
        &:hover {
          background-color: #eaeaea;
          color: #000000;
        }
        &:active {
          background-color: #c8c8c8;
          color: #212121;
        }
    data-is-focusable={true}
    disabled={undefined}
    type="button"
  >
    <div
      className=
          ms-Button-textContainer
          {
            flex-grow: 1;
          }
    >
      <div
        className=
            ms-Button-label
            {
              font-weight: 600;
              line-height: 100%;
              margin-bottom: 5px;
              margin-left: 0;
              margin-right: 0;
              margin-top: 0;
            }
        id="id__18"
      >
        Create account
      </div>
      <div
        className=
            ms-Button-description
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #666666;
              font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              line-height: 100%;
            }
            $button:hover & {
              color: #212121;
            }
        id="id__19"
      >
        You can create a new account here.
      </div>
    </div>
  </button>
</div>
`;

exports[`Button renders DefaultButton correctly 1`] = `
<div
  className=
      ms-Button
      {
        display: inline-flex;
      }
>
  <button
    aria-describedby={null}
    aria-label={undefined}
    aria-labelledby={null}
    aria-pressed={undefined}
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: #f4f4f4;
          background: transparent;
          border-radius: 0px;
          border: 1px solid transparent;
          box-sizing: border-box;
          color: #333333;
          cursor: pointer;
          display: flex;
          flex-wrap: nowrap;
          font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 32px;
          justify-content: center;
          min-width: 80px;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          vertical-align: top;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric.is-focusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 0px;
          content: "";
          left: 0px;
          outline: 1px solid #666666;
          position: absolute;
          right: 0px;
          top: 0px;
          z-index: 1;
        }
        &:hover {
          background-color: #eaeaea;
          color: #000000;
        }
        &:active {
          background-color: #c8c8c8;
          color: #212121;
        }
    data-is-focusable={true}
    disabled={undefined}
    type="button"
  >
    <div
      className=
          ms-Button-textContainer
          {
            flex-grow: 1;
          }
    >
      <div
        className=
            ms-Button-label
            {
              font-weight: 600;
              line-height: 100%;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
            }
        id="id__1"
      >
        Button
      </div>
    </div>
  </button>
</div>
`;

exports[`Button renders IconButton correctly 1`] = `
<div
  className=
      ms-Button
      ms-Button--icon
      {
        display: inline-flex;
      }
>
  <button
    aria-describedby={null}
    aria-label="Emoji"
    aria-labelledby={null}
    aria-pressed={undefined}
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: transparent;
          background: transparent;
          border-radius: 0px;
          border: 1px solid transparent;
          box-sizing: border-box;
          cursor: pointer;
          display: flex;
          flex-wrap: nowrap;
          font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 32px;
          justify-content: center;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          vertical-align: top;
          width: 32px;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric.is-focusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 0px;
          content: "";
          left: 0px;
          outline: 1px solid #666666;
          position: absolute;
          right: 0px;
          top: 0px;
          z-index: 1;
        }
        &:hover {
          color: #004578;
        }
        &:active {
          color: #0078d7;
        }
    data-is-focusable={true}
    disabled={undefined}
    title="Emoji"
    type="button"
  >
    <i
      aria-hidden={true}
      aria-label={undefined}
      className=
          ms-Icon
          ms-Button-icon
          {
            display: inline-block;
            flex-shrink: 0;
            font-size: 16px;
            height: 16px;
            line-height: 16px;
            margin-bottom: 0;
            margin-left: 4px;
            margin-right: 4px;
            margin-top: 0;
            text-align: center;
            vertical-align: middle;
          }
      data-icon-name="Emoji2"
      role="presentation"
    />
  </button>
</div>
`;

exports[`Button renders Primary CompoundButton correctly 1`] = `
<div
  className=
      ms-Button
      ms-Button-compoundPrimary
      {
        display: inline-flex;
        height: auto;
        max-width: 280px;
      }
>
  <button
    aria-describedby="id__23"
    aria-label={undefined}
    aria-labelledby={null}
    aria-pressed={undefined}
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: flex-start;
          background-color: #0078d7;
          background: transparent;
          border-radius: 0px;
          border: 1px solid transparent;
          box-sizing: border-box;
          color: #ffffff;
          cursor: pointer;
          display: flex;
          flex-direction: row;
          flex-wrap: nowrap;
          font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          justify-content: center;
          min-height: 72px;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 0;
          position: relative;
          text-align: left;
          text-decoration: none;
          user-select: none;
          vertical-align: top;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric.is-focusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 0px;
          content: "";
          left: 0px;
          outline: 1px solid #666666;
          position: absolute;
          right: 0px;
          top: 0px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active){& {
          -ms-high-contrast-adjust: none;
          background-color: WindowText;
          color: Window;
        }
        &:hover {
          background-color: #106ebe;
          color: #ffffff;
        }
        @media screen and (-ms-high-contrast: active){&:hover {
          -ms-high-contrast-adjust: none;
          background-color: WindowText;
          color: Window;
        }
        &:active {
          background-color: #005a9e;
          color: #ffffff;
        }
        @media screen and (-ms-high-contrast: active){&:active {
          -ms-high-contrast-adjust: none;
          background-color: WindowText;
          color: Window;
        }
    data-is-focusable={true}
    disabled={undefined}
    type="button"
  >
    <div
      className=
          ms-Button-textContainer
          {
            flex-grow: 1;
          }
    >
      <div
        className=
            ms-Button-label
            {
              font-weight: 600;
              line-height: 100%;
              margin-bottom: 5px;
              margin-left: 0;
              margin-right: 0;
              margin-top: 0;
            }
        id="id__22"
      >
        Create account
      </div>
      <div
        className=
            ms-Button-description
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #ffffff;
              font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
              line-height: 100%;
            }
            @media screen and (-ms-high-contrast: active){& {
              -ms-high-contrast-adjust: none;
              background-color: WindowText;
              color: Window;
            }
            $button:hover & {
              color: #ffffff;
            }
            @media screen and (-ms-high-contrast: active){$button:hover & {
              -ms-high-contrast-adjust: none;
              background-color: WindowText;
              color: Window;
            }
        id="id__23"
      >
        You can create a new account here.
      </div>
    </div>
  </button>
</div>
`;

exports[`Button renders Primary correctly 1`] = `
<div
  className=
      ms-Button
      {
        display: inline-flex;
      }
>
  <button
    aria-describedby={null}
    aria-label={undefined}
    aria-labelledby={null}
    aria-pressed={undefined}
    className=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: #0078d7;
          background: transparent;
          border-radius: 0px;
          border: 1px solid transparent;
          box-sizing: border-box;
          color: #ffffff;
          cursor: pointer;
          display: flex;
          flex-wrap: nowrap;
          font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 32px;
          justify-content: center;
          min-width: 80px;
          outline: transparent;
          padding-bottom: 0;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 0;
          position: relative;
          text-align: center;
          text-decoration: none;
          user-select: none;
          vertical-align: top;
        }
        &::-moz-focus-inner {
          border: 0;
        }
        .ms-Fabric.is-focusVisible &:focus:after {
          border: 1px solid #ffffff;
          bottom: 0px;
          content: "";
          left: 0px;
          outline: 1px solid #666666;
          position: absolute;
          right: 0px;
          top: 0px;
          z-index: 1;
        }
        @media screen and (-ms-high-contrast: active){& {
          -ms-high-contrast-adjust: none;
          background-color: WindowText;
          color: Window;
        }
        &:hover {
          background-color: #106ebe;
          color: #ffffff;
        }
        @media screen and (-ms-high-contrast: active){&:hover {
          -ms-high-contrast-adjust: none;
          background-color: WindowText;
          color: Window;
        }
        &:active {
          background-color: #005a9e;
          color: #ffffff;
        }
        @media screen and (-ms-high-contrast: active){&:active {
          -ms-high-contrast-adjust: none;
          background-color: WindowText;
          color: Window;
        }
    data-is-focusable={true}
    disabled={undefined}
    type="button"
  >
    <div
      className=
          ms-Button-textContainer
          {
            flex-grow: 1;
          }
    >
      <div
        className=
            ms-Button-label
            {
              font-weight: 600;
              line-height: 100%;
              margin-bottom: 0;
              margin-left: 4px;
              margin-right: 4px;
              margin-top: 0;
            }
        id="id__5"
      >
        Button
      </div>
    </div>
  </button>
</div>
`;
